FIX 141990 List add columns button should always be right-aligned

--- a/skins/default/list-head.scss
+++ b/skins/default/list-head.scss
@@ -54,7 +54,7 @@ article.list > form > table > thead {
 				}
 
 				&.column_select {
-					background: #e8e8e8 url('img/add-column-16.svg') center no-repeat;
+					background: #e8e8e8 url('img/add-column-16.svg') right 2px center no-repeat;
 
 					> a {
 						font-size: 0;
